XWMM Change log
1.9.1
- Fixes:
-- Fixed genre list display was not always showing
-- Fixed movie information not always showing
-- Fixed changing covers and fanart in movies

1.9.2
- Fixes:
-- Fixed genre list display was not always showing in TV Shows
-- Fixed episode list not always showing

- Added:
-- Scraper list is created dynamicly from installed add-ons
-- Fanart display in Movie interface

1.9.3
- Fixes:
-- Save button disabled
-- double-click on fanart allow to change fanarts

1.9.4
- Fixes:
-- Music Genres and Artists were not displayed properly
-- fwatched / unwatched when using MySQL database
-- Files option with IE
-- Video flag display
-- Movie release date in HTML export
-- Music field update

2.0.0a
- Fixes:
-- Changed many request from http to JSON-RPC
-- fixed IE8 compatibility
-- fixed files view that was not displayed

- Added:
-- added new XWMM icon

2.0.0b:
- Fixes:
-- Music interface display

2.0.0c:
- Fixes:
-- broken JSON-RPC requests (changed fields for properties)
-- Removed caching files

- Added
-- some movie fields (country, imdb number, original title) in other details
-- improved movie save function: set fields change enables save button
-- improved musci save function: save any field and progress bar