@@ -5,14 +5,17 @@
 	<link rel="shortcut icon" href="../images/favicon.ico" />
 	<link rel="stylesheet" type="text/css" href="../extjs/resources/css/ext-all.css" />
 	<link rel="stylesheet" type="text/css" href="../extjs/resources/css/xtheme-darkgray.css" />
-    <link rel="stylesheet" type="text/css" href="../silk.css" />
+    <link rel="stylesheet" type="text/css" href="../css/silk.css" />
 	<link rel="stylesheet" type="text/css" href="../css/data-view.css" />
 	<script type="text/javascript" src="../extjs/adapter/ext/ext-base.js"></script>
 	<script type="text/javascript" src="../extjs/ext-all.js"></script>
 	<script type="text/javascript" src="../ux/ext-basex.js"></script>
 	<script type="text/javascript" src="../ux/RowEditor.js"></script>
 	<script type="text/javascript" src="../ux/DataView-more.js"></script>
-	<script type="text/javascript" src="../xbmc.js"></script>
+	
+	<script type="text/javascript" src="../include/ext.ux.xbmc.js"></script>
+	<script type="text/javascript" src="../include/xbmc.js"></script>
+	
 	<script type="text/javascript" src="../global.js"></script>
 	<script type="text/javascript" src="../export.js"></script>
 	<script type="text/javascript" src="images.js"></script>
@@ -22,7 +25,6 @@
 	<script type="text/javascript" src="music.js"></script>
 	<script type="text/javascript" src="musiclist.js"></script>
 	<script type="text/javascript" src="albumgenres.js"></script>
-
 	
 </head>
 </html>
