@@ -5,7 +5,7 @@
 	<link rel="shortcut icon" href="../images/favicon.ico" />
 	<link rel="stylesheet" type="text/css" href="../extjs/resources/css/ext-all.css" />
 	<link rel="stylesheet" type="text/css" href="../extjs/resources/css/xtheme-darkgray.css" />
-    <link rel="stylesheet" type="text/css" href="../silk.css" />
+    <link rel="stylesheet" type="text/css" href="../css/silk.css" />
 	<link rel="stylesheet" type="text/css" href="../css/data-view.css" />
 	<script type="text/javascript" src="../extjs/adapter/ext/ext-base.js"></script>
 	<script type="text/javascript" src="../extjs/ext-all.js"></script>
