@@ -12,7 +12,10 @@
 	<script type="text/javascript" src="../ux/ext-basex.js"></script>
 	<script type="text/javascript" src="../ux/RowEditor.js"></script>
 	<script type="text/javascript" src="../ux/DataView-more.js"></script>
-	<script type="text/javascript" src="../xbmc.js"></script>
+	
+	<script type="text/javascript" src="../include/ext.ux.xbmc.js"></script>
+	<script type="text/javascript" src="../include/xbmc.js"></script>
+	
 	<script type="text/javascript" src="../global.js"></script>
 	<script type="text/javascript" src="../export.js"></script>
 	<script type="text/javascript" src="images.js"></script>
